minor bug fix - center alignment for age slide

--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,7 @@ body {
 }
 
 .demographics-title {
-  left: 0px;
+  left: 20px;
   text-align: center;
   position: absolute;
   font: 400 22px / 33px "Google Sans"; 
